--- a/cloudpro/templates/upload_file.html
+++ b/cloudpro/templates/upload_file.html
@@ -11,7 +11,7 @@
             padding: 20px;
             background-color: #f4f4f9;
         }
-        h2 {
+        h1,h2 {
             text-align: center;
             color: #333;
         }
@@ -59,18 +59,20 @@
         }
         a:hover {
             text-decoration: underline;
+            font-size: larger;
         }
     </style>
 </head>
 <body>
+    <h1>CLOUDIGO</h1>
     <h2>Upload File</h2>
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Upload</button>
 </form>
-<a href="{% url 'list_files' %}">View All Files</a>
-<a href="{% url 'logout' %}">logout</a>
+<a href="{% url 'list_files' %}" style="text-decoration: none;">View All Files</a>
+<a href="{% url 'logout' %}" style="text-decoration: none;" >logout</a>
 
 </body>
 </html>
