--- a/cloudpro/templates/list_files.html
+++ b/cloudpro/templates/list_files.html
@@ -108,7 +108,7 @@
                 <a href="{{ file.file.url }}">{{ file.file.name }}</a> (Uploaded: {{ file.uploaded_at }})
                 <div class="file-preview">
                     <video controls style="width:100%">
-                        <source src="{{ file.file.url }}" type="video/mp4">
+                        <source src="{{ file.file.url }}">
                         Your browser does not support the video tag.
                     </video>
                 </div>
